# spotql

./: Cargo.toml  README.adoc  README.md  mise.toml  psql.sh  rebuild_docker.sh  test.sh  watch.sh
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
src/: config.rs  logger.rs  main.rs  parser.rs  wire.rs
src/parsers/: auth.rs  client.rs  column.rs  message.rs  mod.rs  parser_error.rs  predicate.rs  query.rs  regular.rs  startup.rs  statement.rs  terminate.rs
src/parsers/incoming/: auth.rs  column.rs  expression.rs  identifier.rs  mod.rs  predicate.rs  query.rs  startup.rs  statement.rs  unsupported.rs  ws.rs
src/tests/: mod.rs  parser.rs
src/tests/parsers/: auth.rs  case.rs  client.rs  column.rs  column_test.rs  common_test.rs  expression_test.rs  identifier_test.rs  mod.rs  predicate.rs  query.rs  query_test.rs  regular.rs  startup.rs  startup_test.rs  statement.rs  terminate.rs  terminate_test.rs  unsupported.rs  ws.rs
