[package]
name = "spotql"
version = "0.1.0"
authors = [
    "Christoph Kappel <christophl@unexist.dev>"
]
license-file = "LICENSE"
homepage = "https://unexist.dev"
repository = "https://hg.unexist.dev/spotql"
edition = "2024"
include = ["/src", "LICENSE"]

[dependencies]
anyhow = "1.0.102"
nom = "8.0.0"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = [ "blocking" ]}
rspotify = { version = "0.16.1" }
env_logger = "0.11.10"
log = "0.4.33"
clap = { version = "4.6.1", features = ["derive"] }
clap-config-file = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.24"
stdext = "0.3.3"
